# imfapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/imfapi/: database.py  utils.py
src/imfapi/data_models/: compact_data.py  data_structure.py
