[project]
name = "imfapi"
version = "0.1.1"
description = "Python package to download IMF data from the official API."
readme = "README.md"
authors = [{ name = "Pedro Soares", email = "phcastrosoares@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "black>=24.10.0",
    "fastprogress>=1.0.3",
    "joblib>=1.4.2",
    "pandas>=2",
    "pydantic>=2.10.2",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/phcsoares/imfapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.119.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas-stubs>=2.2.3.241126",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest>=8.3.3",
]
